--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -519,7 +519,7 @@
                 </div>
                 <div class="cardOpinionShort col-4">
                     <article class="opinionTop">
-                        <img src="../img/quotation-mark.png" alt="" class="quotationMark">
+                        <img src="../img/quotation-mark.png" alt="Acotacion" class="quotationMark">
                         <img src="../img/rating.png" alt="Compartir" class="rating">
                     </article>
                     <article class="opinionMedium">
@@ -674,7 +674,7 @@
                 <div class="groupLine row">
                     <div class="cardOpinionShort col-4">
                         <article class="opinionTop">
-                            <img src="../img/quotation-mark.png" alt="" class="quotationMark">
+                            <img src="../img/quotation-mark.png" alt="Acotacion" class="quotationMark">
                             <img src="../img/rating.png" alt="Rating" class="rating">
                         </article>
                         <article class="opinionMedium">
