--- a/views/wrong.html
+++ b/views/wrong.html
@@ -18,10 +18,10 @@
 <body>
     <section class="mainContainer">
         <article class="main">
-            <img class="item" src="../img/banner1.png" alt="">
-            <img class="item1" src="../img/img.png" alt="">
-            <img class="item2" src="../img/banner2.png" alt="">
-            <img class="item3" src="../img/banner3.png" alt="">
+            <img class="item" src="../img/banner1.png" alt="Banner1">
+            <img class="item1" src="../img/img.png" alt="Imagen">
+            <img class="item2" src="../img/banner2.png" alt="Banner2">
+            <img class="item3" src="../img/banner3.png" alt="Banner3">
             <a href="../html/../index.html" class="return"><span><-</span>Retornar</a>
         </article>
     </section>
