--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,92 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&family=Press+Start+2P&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #0c0c0c;
+  font-family: "Poppins", sans-serif;
+}
+body html {
+  scroll-behavior: smooth;
+}
+
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: auto;
+  border: 1px solid #090909;
+  box-shadow: 0 0 10px 2px #090909;
+  background-color: #0f0f0f;
+  animation: navbar 1s linear;
+  z-index: 100;
+}
+@keyframes navbar {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+.header .logo .logoDelord {
+  width: 40px;
+  transform: scale(100%) rotate(0deg);
+  transition: transform 0.5s;
+}
+.header .logo .logoDelord:hover {
+  transform: scale(105%) rotate(270deg);
+  filter: drop-shadow(5px 5px 30px #26a4e3);
+}
+.header #menu {
+  display: none;
+}
+.header .menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.header .menu ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style: none;
+}
+.header .menu ul li {
+  text-decoration: none;
+}
+.header .menu ul li .categoria {
+  font-size: 1rem;
+  cursor: pointer;
+  text-decoration: none;
+  color: #ffffff;
+  border-bottom: 1px solid transparent;
+  transition: all 0.5s ease;
+}
+.header .menu ul li .categoria .item {
+  display: none;
+}
+.header .menu ul li:hover .categoria {
+  color: #eb5a00;
+  background-color: rgba(255, 255, 255, 0.1529411765);
+  border-bottom: 1px solid #eb5a00;
+}
+.header .menu .socialMedia {
+  display: none;
+}
+.header .drawer {
+  display: none;
+}
+.header .close {
+  display: none;
+}
 
 /*# sourceMappingURL=main.css.map */
