--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,12 @@ body {
 body html {
   scroll-behavior: smooth;
 }
+body html .contenedor {
+  width: 100%;
+  height: auto;
+  margin: 0px auto;
+  position: relative;
+}
 
 .header {
   width: 100%;
@@ -87,6 +93,161 @@ body html {
 }
 .header .close {
   display: none;
+}
+
+.heroSection {
+  width: 100%;
+  height: auto;
+  max-height: max-content;
+  background-image: url("../img/pic1.png");
+  background-position: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: visible;
+  object-fit: cover;
+  animation: background 0.5s linear;
+}
+@keyframes background {
+  0% {
+    transform: scale(0%);
+    opacity: 0;
+  }
+  25% {
+    transform: scale(25%);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(50%);
+    opacity: 0.5;
+  }
+  75% {
+    transform: scale(100%);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(100%);
+    opacity: 1;
+  }
+}
+.heroSection .hero {
+  width: 80%;
+  max-width: 1100px;
+  height: 800px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0px auto;
+}
+.heroSection .hero .info {
+  width: 50%;
+  text-align: left;
+  animation: info 1s linear;
+}
+@keyframes info {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  25% {
+    transform: translateY(75%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(50%);
+    opacity: 0.3;
+  }
+  75% {
+    transform: translateY(25%);
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+.heroSection .hero .info h1 {
+  font-size: 2.2rem;
+  line-height: 40px;
+  margin-bottom: 40px;
+  font-weight: 400;
+  color: #e3e3e3;
+}
+.heroSection .hero .info h2 {
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #eb5a00;
+}
+.heroSection .hero .info .btnAction {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.heroSection .hero .info .btnAction .ctaDeveloper {
+  width: 50%;
+  font-size: 1rem;
+  margin: 0px 2px;
+  text-align: center;
+  padding: 25px 35px;
+  text-decoration: none;
+  background-color: #eb5a00;
+  color: #e3e3e3;
+  border-radius: 50px;
+  font-weight: 600;
+  transition: all 0.3s ease-in;
+}
+.heroSection .hero .info .btnAction .ctaDeveloper:hover {
+  background-color: #232323;
+  color: #eb5a00;
+  box-shadow: 0 0 10px #eb5a00;
+  text-shadow: 0 0 10px #eb5a00;
+}
+.heroSection .hero .info .btnAction .ctaDesigner {
+  width: 50%;
+  font-size: 1rem;
+  margin: 0px 2px;
+  text-align: center;
+  padding: 25px 35px;
+  text-decoration: none;
+  background-color: #26A4E3;
+  color: #e3e3e3;
+  border-radius: 50px;
+  font-weight: 600;
+  transition: all 0.3s ease-in;
+}
+.heroSection .hero .info .btnAction .ctaDesigner:hover {
+  background-color: #232323;
+  color: #26A4E3;
+  box-shadow: 0 0 10px #26A4E3;
+  text-shadow: 0 0 10px #26A4E3;
+}
+.heroSection .hero .cellphone {
+  width: 33%;
+  object-fit: cover;
+  animation: cellphone 1.5s linear;
+}
+@keyframes cellphone {
+  0% {
+    transform: translateX(50%);
+    opacity: 0;
+  }
+  25% {
+    transform: translateX(35%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(20%);
+    opacity: 0.3;
+  }
+  75% {
+    transform: translateX(10%);
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
