--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -8,6 +8,12 @@ body{
     font-family: 'Poppins', sans-serif;
     html{
         scroll-behavior: smooth;
+        .contenedor{
+            width: 100%;
+            height: auto;
+            margin: 0px auto;
+            position: relative;
+        }
     }
 }
 
