--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ body html .contenedor {
   font-size: 1rem;
   cursor: pointer;
   text-decoration: none;
-  color: #ffffff;
+  color: #e3e3e3;
   border-bottom: 1px solid transparent;
   transition: all 0.5s ease;
 }
@@ -83,7 +83,7 @@ body html .contenedor {
 .header .menu ul li:hover .categoria {
   color: #eb5a00;
   background-color: rgba(255, 255, 255, 0.1529411765);
-  border-bottom: 1px solid #eb5a00;
+  border-bottom: 1px solid rgba(235, 90, 0, 0.2196078431);
 }
 .header .menu .socialMedia {
   display: none;
