--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -10,9 +10,9 @@
     justify-content: space-evenly;
     align-items: center;
     padding: auto;
-    border: 1px solid #090909;
-    box-shadow: 0 0 10px 2px #090909;
-    background-color: #0f0f0f;
+    border: 1px solid $shadowColor;
+    box-shadow: 0 0 10px 2px $shadowColor;
+    background-color: $backgroundColor;
     animation: navbar 1s linear;
     z-index: 100;
     @keyframes navbar{
@@ -23,15 +23,13 @@
             transform: translateY(0%);
         }
     }
-    .logo{
-        .logoDelord{
-            width: 40px;
-            transform: scale(100%) rotate(0deg);
-            transition: transform .5s;
-            &:hover{
-                transform:scale(105%) rotate(270deg);
-                filter: drop-shadow(5px 5px 30px #26a4e3);
-            }
+    .logo .logoDelord{
+        width: 40px;
+        transform: scale(100%) rotate(0deg);
+        transition: transform .5s;
+        &:hover{
+            transform:scale(105%) rotate(270deg);
+            filter: drop-shadow(5px 5px 30px #26a4e3);
         }
     }
     #menu{
@@ -49,10 +47,10 @@
             li{
                 text-decoration: none;
                 .categoria{
-                    font-size: 1rem;
+                    font-size: $regularText;
                     cursor: pointer;
                     text-decoration: none;
-                    color: #ffffff;
+                    color: $whiteColor;
                     border-bottom:1px solid transparent;
                     transition: all .5s ease;
                     .item{
@@ -60,9 +58,9 @@
                     }
                 }
                 &:hover .categoria{
-                    color:#eb5a00;
-                    background-color: #ffffff27;
-                    border-bottom: 1px solid #eb5a00;
+                    color:$secondaryColor;
+                    background-color: $opacityBackgroundColor;
+                    border-bottom: 1px solid $orangeOpacityColor;
                 }
             }
         }
