--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,75 @@ body {
   background-color: #0c0c0c;
   font-family: "Poppins", sans-serif;
 }
-body html {
+
+html {
   scroll-behavior: smooth;
 }
-body html .contenedor {
+html .contenedor {
   width: 100%;
   height: auto;
   margin: 0px auto;
-  position: relative;
+}
+html .contenedor .socialMediaUno {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 200px;
+  left: 40px;
+  z-index: 10;
+  animation: socialMedia 1.5s linear;
+}
+@keyframes socialMedia {
+  0% {
+    transform: translateX(-200%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+html .contenedor .socialMediaUno .iconLink {
+  width: 100%;
+  padding: 7px 7px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.2039215686);
+  overflow: visible;
+  filter: drop-shadow(0 0 10px #090909);
+  transform: scale(100%);
+  transition: all 0.3s ease-in-out;
+}
+html .contenedor .socialMediaUno .iconLink:hover {
+  filter: drop-shadow(0 0 10px #3a3a3a);
+  transform: scale(105%);
+}
+html .contenedor .arrow {
+  width: 5%;
+  position: fixed;
+  bottom: 10px;
+  right: 30px;
+  z-index: 10;
+  animation: arrowUp 1.5s linear;
+}
+@keyframes arrowUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  25% {
+    transform: translateY(75%);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(50%);
+    opacity: 0.3;
+  }
+  75% {
+    transform: translateY(25%);
+    opacity: 0.7;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
 }
 
 .header {
