--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -30,7 +30,7 @@
     $hoverColor:#232323;
     $cardColor:#141414;
     $backgroundColor:#0f0f0f;
-    $opacityBackgroundColor:#ffffff27;
+    $opacityBackgroundColor:#ffffff34;
     $blueBackgroundColor:#00344e;
     $orangeBackgroundColor:#2b1000;
     $lineColor:#2e2e2e;
@@ -41,6 +41,7 @@
     $orangeShadowColor:#fe6302;
     $shadowColor:#090909;
     $neutralShadow:#010101;
+    $dropShadow:#3a3a3a;
 
     // Line - height
 
