--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ html {
 html .contenedor {
   width: 100%;
   height: auto;
-  margin: 0px auto;
+  margin: 0 auto;
 }
 html .contenedor .socialMediaUno {
   display: flex;
@@ -143,7 +143,7 @@ html .contenedor .arrow {
 }
 .header .menu ul li:hover .categoria {
   color: #eb5a00;
-  background-color: rgba(255, 255, 255, 0.1529411765);
+  background-color: rgba(255, 255, 255, 0.2039215686);
   border-bottom: 1px solid rgba(235, 90, 0, 0.2196078431);
 }
 .header .menu .socialMedia {
