--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&family=Press+Start+2P&display=swap");
 * {
   margin: 0;
@@ -361,6 +362,98 @@ html .contenedor .arrow {
 .nosotros .containerInfo .info .grupos {
   margin-top: 10px;
   width: 30%;
+}
+
+.contenedorEmpleos {
+  width: 100vw;
+  max-width: 1100px;
+  margin: 150px auto !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+}
+.contenedorEmpleos .subtitulo {
+  color: #e3e3e3;
+  font-size: 1.87rem;
+  font-weight: 600;
+  margin-bottom: 100px;
+}
+.contenedorEmpleos .jobs {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+}
+.contenedorEmpleos .empleosArticle {
+  width: 40%;
+  margin-right: 50px;
+}
+.contenedorEmpleos .empleosArticle .subtitulo {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #e3e3e3;
+  margin-bottom: 20px;
+}
+.contenedorEmpleos .empleosArticle .contenedorEmpleo .paragraph {
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  color: #a2a2a2;
+  margin-bottom: 20px;
+}
+.contenedorEmpleos .empleosArticle .contenedorEmpleo p {
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  color: #eb5a00;
+  margin-bottom: 40px;
+}
+.contenedorEmpleos .empleosArticle .btnDesarrolladorDiseñador {
+  width: 40%;
+  display: block;
+  cursor: pointer;
+  background-color: #26A4E3;
+  border: 1px solid #26A4E3;
+  border-radius: 50px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #e3e3e3;
+  padding: 20px 35px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+.contenedorEmpleos .empleosArticle .btnDesarrolladorDiseñador:hover {
+  background-color: #232323;
+  border: 1px solid #232323;
+  color: #26A4E3;
+  box-shadow: 0 0 10px #26A4E3;
+  text-shadow: 0 0 10px #26A4E3;
+}
+.contenedorEmpleos .screens {
+  width: 60%;
+  height: auto;
+  margin: 0 auto;
+}
+.contenedorEmpleos .screens .screen {
+  width: 100%;
+  height: auto;
+  filter: grayscale(100%);
+  object-fit: cover;
+  box-shadow: 0 0 10px 3px #010101;
+  cursor: pointer;
+  transform: scale(100%);
+  transition: all 0.5s ease-in-out;
+}
+.contenedorEmpleos .screens .screen:hover {
+  transform: scale(100.5%);
+  filter: grayscale(30%);
+  box-shadow: 0 0 21px 7px #010101;
 }
 
 /*# sourceMappingURL=main.css.map */
