--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,9 +6,8 @@
 @import "_heroSection";
 @import "_aboutUs";
 @import "_services";
-@import "_advertisingUno";
+@import "_advertising";
 @import "_match";
-@import "_advertisingDos";
 @import "_form";
 @import "_jobs";
 @import "_testimony";
