--- a/css/style.css
+++ b/css/style.css
@@ -1721,7 +1721,8 @@ html{
     color: #8a8a8a;
     font-family: poppins, sans-serif;
     margin: 0px 5px;
-    align-items: flex-start;
+    text-align: left;
+    padding-left: 20px;
 }
 .footer .footerMedium .news .accion .btnAccion{
     width: 150px;
