--- a/css/main.css
+++ b/css/main.css
@@ -563,8 +563,8 @@ html .contenedor .arrow {
 .footer .mainFooter .services .apps h4 {
   margin-top: 5px;
   margin-bottom: 5px;
-  font-size: 0.7rem;
-  color: #b6b4b4;
+  font-size: 0.8rem;
+  color: #a2a2a2;
 }
 .footer .mainFooter .services .apps .app {
   width: 100px;
@@ -581,8 +581,8 @@ html .contenedor .arrow {
 }
 .footer .mainFooter .menu ul li a {
   text-decoration: none;
-  font-size: 0.7rem;
-  color: #b6b4b4;
+  font-size: 0.8rem;
+  color: #a2a2a2;
 }
 .footer .mainFooter .menu ul li a:hover {
   text-decoration: underline;
@@ -599,7 +599,7 @@ html .contenedor .arrow {
 }
 .footer .footerMedium .news .inscribir {
   text-align: center;
-  color: #b6b4b4;
+  color: #a2a2a2;
   font-size: 0.8rem;
 }
 .footer .footerMedium .news .accion {
@@ -612,8 +612,8 @@ html .contenedor .arrow {
   border: 1px solid #090909;
   box-shadow: 0 0 10px 2px #090909;
   background-color: #0f0f0f;
-  color: #8a8a8a;
-  font-family: poppins, sans-serif;
+  color: #a2a2a2;
+  font-family: "Poppins", sans-serif;
   margin: 0px 5px;
   text-align: left;
   padding-left: 20px;
@@ -622,14 +622,14 @@ html .contenedor .arrow {
   width: 150px;
   font-size: 1rem;
   text-align: center;
-  color: white;
+  color: #e3e3e3;
   background-color: #26A4E3;
   border: 1px solid #26A4E3;
   border-radius: 50px !important;
   cursor: pointer;
   padding: 12.5px 5px;
   text-decoration: none;
-  font-family: poppins, sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 600;
   transition: all 0.3s ease-in-out;
 }
@@ -669,8 +669,8 @@ html .contenedor .arrow {
   text-align: center;
   border-top: 1px solid #2e2e2e;
   padding-top: 5px;
-  font-size: 0.5rem;
-  color: white;
+  font-size: 0.6rem;
+  color: #e3e3e3;
 }
 
 /*# sourceMappingURL=main.css.map */
