--- a/css/main.css
+++ b/css/main.css
@@ -523,6 +523,73 @@ html .contenedor .arrow {
   color: #0c0c0c !important;
 }
 
+.accordion {
+  width: 80%;
+  height: auto;
+  margin: 150px auto 150px auto !important;
+}
+.accordion .subtitle {
+  color: white;
+  font-size: 1.87rem;
+  font-weight: 600;
+  margin: 0px auto 100px;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+.accordion .scrollDownAnswers {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+.accordion .scrollDownAnswers details {
+  padding: 10px 0px;
+}
+.accordion .scrollDownAnswers details summary {
+  cursor: pointer;
+  color: #a2a2a2;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 10px 0px;
+  font-family: poppins, sans-serif;
+  border-bottom: 1px solid #2e2e2e;
+}
+.accordion .scrollDownAnswers details p {
+  color: rgb(199, 199, 199);
+  font-size: 0.8rem;
+  font-weight: 400;
+  margin: 15px auto 0px;
+  padding: 20px 20px;
+  font-family: Poppins, sans-serif;
+  background-color: #0f0f0f;
+  box-shadow: 0 0 10px 2px #090909;
+  border-radius: 10px;
+}
+.accordion .whatsApp {
+  width: 20%;
+  display: block;
+  cursor: pointer;
+  background-color: #26a4e3;
+  border: 1px solid #26A4E3;
+  border-radius: 50px;
+  font-family: Poppins, sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #ffffff;
+  margin: 40px auto;
+  padding: 15px 35px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+.accordion .whatsApp :hover {
+  background-color: #232323;
+  border: 1px solid #232323;
+  color: #26A4E3;
+  box-shadow: 0 0 10px #26A4E3;
+  text-shadow: 0 0 10px #26A4E3;
+}
+
 .footer {
   width: 100%;
   border: 1px solid #090909;
