--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import "_services";
 @import "_advertising";
 @import "_match";
+@import "_faq";
 @import "_form";
 @import "_jobs";
 @import "_testimony";
