--- a/scss/_faq.scss
+++ b/scss/_faq.scss
@@ -2,40 +2,40 @@
 .accordion{
     width:80%;
     height:auto;
-    margin: 150px auto 150px auto !important;
+    margin: $sectionMargin !important;
     .subtitle{
-        color: white;
-        font-size: 1.87rem;
-        font-weight: 600;
+        color: $whiteColor;
+        font-size: $LargeTitle;
+        font-weight: $bold;
         margin:  0px auto 100px;
         text-align: center;
-        font-family: 'Poppins', sans-serif;
+        font-family: $mainFont;
     }
     .scrollDownAnswers{
         width: 100%;
         height: auto;
         display: block;
-        margin: 0 auto;
+        margin:$neutralMargin;
         details{
             padding: 10px 0px;
             summary{
                 cursor:pointer;
-                color: #a2a2a2;
-                font-size: 1rem ;
-                font-weight: 400;
+                color: $tertiaryColor;
+                font-size: $regularText ;
+                font-weight:$boldMedium;
                 padding: 10px 0px;
-                font-family: poppins, sans-serif;
-                border-bottom: 1px solid #2e2e2e;
+                font-family: $mainFont;
+                border-bottom: 1px solid $lineColor;
             }
             p{
                 color: rgb(199, 199, 199);
-                font-size: 0.8rem ;
-                font-weight: 400;
+                font-size: $smallTitle ;
+                font-weight:$boldMedium;
                 margin: 15px auto 0px;
                 padding: 20px 20px;
-                font-family: Poppins, sans-serif;
-                background-color: #0f0f0f;
-                box-shadow: 0 0 10px 2px #090909;
+                font-family: $mainFont;
+                background-color:  $backgroundColor;
+                box-shadow: 0 0 10px 2px $shadowColor;
                 border-radius: 10px;
             }
         }
@@ -44,24 +44,24 @@
         width: 20%;
         display:block;
         cursor: pointer;
-        background-color: #26a4e3;
-        border:1px solid #26A4E3;
-        border-radius: 50px;
-        font-family: Poppins, sans-serif;
-        font-weight: 600;
-        font-size: 1rem;
+        background-color:  $primaryColor;
+        border:1px solid  $primaryColor;
+        border-radius: $ctoBorderRadius;
+        font-family:  $mainFont;
+        font-weight: $bold;
+        font-size: $regularText;
         color: #ffffff;
         margin: 40px auto;
-        padding: 15px 35px;
+        padding:  $paddingCto;
         text-align: center;
         text-decoration: none;
         transition: all 0.3s ease-in-out;
-        :hover{
-            background-color:#232323;
-            border:1px solid #232323;
-            color: #26A4E3;
-            box-shadow: 0 0 10px #26A4E3;
-            text-shadow: 0 0 10px #26A4E3;
+        &:hover{
+            background-color: $hoverColor;
+            border:1px solid  $hoverColor;
+            color: $primaryColor;
+            box-shadow: 0 0 10px $primaryColor;
+            text-shadow: 0 0 10px $primaryColor;
         }
     }
 }
