--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "_advertising";
 @import "_match";
 @import "_jobs";
+@import "_sponsor";
 @import "_testimony";
 @import "_faq";
 @import "_form";
