--- a/scss/_testimony.scss
+++ b/scss/_testimony.scss
@@ -1,15 +1,15 @@
 // Testimony
 .containerTestimony{
     width: 85%;
-    margin: 0px auto;
+    margin:$margin;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     .subtitulo{
-        color: white;
-        font-size: 1.87rem;
-        font-weight: 600;
+        color:  $whiteColor;
+        font-size: $LargeTitle;
+        font-weight: $bold;
         margin-bottom: 100px;
     }
     .bundleOpinion{
@@ -20,13 +20,13 @@
                 margin: 0 auto 80px auto;
                 .cardOpinionShort{
                     width:32%;
-                    color: aliceblue;
-                    background-color: rgb(15, 15, 15);
+                    color: $tertiaryColor;
+                    background-color: $cardColor;
                     border-radius:10px;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    box-shadow: 0 0 10px 2px #090909;
+                    box-shadow: 0 0 10px 2px $shadowColor;
                     margin: 7px;
                     text-align: left;
                     .opinionTop{
@@ -49,11 +49,11 @@
                 .opinionMedium{
                     width: 90%;
                     padding: 10px 10px;
-                    border-top: 1px solid #2e2e2e;
-                    border-bottom: 1px solid #2e2e2e;
+                    border-top: 1px solid $lineColor;
+                    border-bottom: 1px solid $lineColor;
                     .paragraph{
-                        font-size: 0.75rem;
-                        color:#a2a2a2;
+                        font-size: $smallTitle;
+                        color:$tertiaryColor;
                     }
                 }
                 .opinionBottom{
@@ -72,8 +72,8 @@
                         top: 12px;
                         left: 60px;
                         p{
-                            font-size: 0.6rem;
-                            color:#d0d0d0;
+                            font-size: $xSmallParagraphText;
+                            color:$tertiaryColor;
                             margin-bottom:0px;
                         }
                     }
@@ -92,25 +92,25 @@
     }
     .verMas{
         width:20%;
-        font-size: 1rem;
+        font-size: $regularText;
         text-align: center;
-        color: white;
-        background-color: #26A4E3;
-        border:1px solid #26A4E3;
+        color: $whiteColor;
+        background-color: $primaryColor;
+        border:1px solid $primaryColor;
         border-radius: 50px;
         cursor: pointer;
         margin-top:60px;
         padding:  $paddingCto;
         text-decoration: none;
-        font-family: 'Poppins', sans-serif;
-        font-weight: 600;
+        font-family: $mainFont;
+        font-weight: $bold;
         transition: all 0.3s ease-in-out;
         &:hover{
-            background-color:#232323;
-            border:1px solid #232323;
-            color: #26a4e3;
-            box-shadow: 0 0 10px #26a4e3;
-            text-shadow: 0 0 10px  #26a4e3;
+            background-color:$hoverColor;
+            border:1px solid $hoverColor;
+            color: $primaryColor;
+            box-shadow: 0 0 10px $primaryColor;
+            text-shadow: 0 0 10px $primaryColor;
         }
     }
 
